--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
     text-decoration: none;
     font-family: 'Roboto', sans-serif; ;
     box-sizing: border-box;
+    scroll-behavior: smooth;
 }
 header{
     width: 100%;
@@ -15,6 +16,7 @@ header{
     display: flex;
     align-items: center;
     justify-content: space-between;
+    
 }
 .logo img{
    width: 80px;
@@ -90,6 +92,7 @@ header{
         transition: 0.5s;
         overflow: hidden;
         
+        
     }
 
     .nav-bar ul{
@@ -126,7 +129,7 @@ header{
 .container header{
     background-color:hsl(184, 100%, 22%);
     display: flex;
-    height: 90vh;
+    height: 100vh;
     flex-direction: column;
     align-items: center;
     justify-content: center;
@@ -136,8 +139,8 @@ header{
 }
 
 .avater{
-    width: 200px;
-    height: 200px;
+    width: 300px;
+    height: 300px;
     position: relative;
     bottom: 70px;
     
@@ -182,7 +185,90 @@ h1 .header-bio{
 }
 .header-links .myworks{
     padding: 10px 30px ;
-    border: 2px solid white ;
+    background-color: aquamarine;
     border-radius: 5px;
+    color:black;
+}
+/* hero section ends here */
+
+
+@media only screen and (min-width:780px){
+   .container header{
+    display: flex;
+    flex-direction: row-reverse;
+    height: 90vh;
+    
+    
+    
+   }
+   .avater{
+    position: relative;
+    bottom: 20px;
+    width:600px;
+    
+   }
+   .avater img{
+
+   }
+   .header-content{
+    width: 600px;
+    padding: 20px;
+    
+   }
+   .container .header-content{
+    position: relative;
+    bottom: 20px;
+   }
+   .container .header-links{
+    margin: 50px;
+   }
+   .container .header-hi{
+    font-size: 20px;
+   }
+   .container .header-name{
+    font-size: 35px;
+   }
+   
+}
+.about{
+    
+    height: 90vh;
+    height: 790px;
+    background-color: hsl(184, 100%, 22%);
+}
+.about h1{
+    margin-top: 30px;
+    font-size: 30px;
+    margin-bottom: 20px;
+}
+.about-me{
+    padding: 20px;
+    text-align: center;
     color: white;
+}
+.about p{
+    line-height: 20px;
+}
+.about-p-link{
+    color: aquamarine;
+}
+.myskills{
+    padding: 20px;
+}
+
+.about-skills{
+    display: flex;
+    flex-wrap: wrap;
+    text-align: center;
+    justify-content: center;
+    padding: 10px;
+    border: 1px solid white;
+}
+.fa-brands{
+    margin: 15px;
+}
+.myskills h1{
+    text-align: center;
+    color: white;
+    margin-top: 30px;
 }
