--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@
     }
     .nav-bar{
         /* remember */
-        display: none;
+        display: block;
         height: 0;
         position: absolute;
         top: 80px;
@@ -108,12 +108,13 @@
         transition: 0.5s;
         
     }
-    /* .nav-bar ul li a.active{
+    .nav-bar ul li a.active{
     background-color: white;
     color: hsl(184, 100%, 22%);
-    } */
+    
+    }
     .nav-bar.active{
-        height: 450px;
+        height: 50vh;
     
     }
     .nav-bar.active ul{
@@ -122,13 +123,20 @@
 
     .nav-bar ul li a{
         color: hsl(184, 100%, 22%);
-        margin-bottom: 15px;
+        text-decoration: underline;
+        margin-bottom: 25px;
+        
         
     }
     .nav-bar ul li a:hover{
         background-color: hsl(184, 100%, 22%);
         color: white;
     }
+    .container header{
+        display: none;
+    }
+   
+    
 }
 /* header main container for mobile */
 .container header{
@@ -148,8 +156,8 @@
 .avater{
     width: 300px;
     height: 300px;
-    position: relative;
-    bottom: 70px;
+    margin-bottom: 50px;
+    
     
     
     
