--- a/style.css
+++ b/style.css
@@ -393,15 +393,58 @@ header .get-socials-aside{
         margin: 20px;
     }
 }
-.get-in-touch{
-    height: 90vh;
+ .message{
+    height: 100vh;
     background-color: hsl(184, 100%, 22%);
     text-align: center; 
     color: white;
-    padding-bottom: 50px;
+    
+    /* padding-bottom: 50px; */
     
 }
-.get-message{
+.message input{
+    width: 80%;
+    height: 35px;
+    margin-bottom: 10px;
+    border-radius: 5px;
+    border:2px solid hsl(184, 77%, 48%) ;
+    padding: 5px;
+    cursor: pointer;
+    
+}
+.message h3{
+    padding: 15px ;
+}
+.message textarea{
+    width: 80%;
+    text-align: center;
+    border-radius: 5px;
+    border:2px solid hsl(184, 77%, 48%);
+    margin: 5px;
+    text-align: start;
+}
+.message .sendmessage{
+    width: 120px;
+    height: 35px;
+    border-radius: 5px;
+    background-color: hsl(184, 100%, 22%);
+    border:2px solid white;
+    color: aliceblue;
+    margin-top: 7px;
+    
+    
+}
+
+
+/* .get-in-touch{
+    height: 100vh;
+    background-color: hsl(184, 100%, 22%);
+    text-align: center; 
+    color: white;
+    /* padding-bottom: 50px; */
+    
+} */
+/* .get-message{
     margin-bottom: 160px;
 }
 .get-message h1{
@@ -438,8 +481,10 @@ header .get-socials-aside{
     color: white;
     padding: 10px;
     border-radius: 5px;
-}
+} */
+
 .get-socials ul{
+    float: inline-end;
     display: flex;
     justify-content: center;
     align-items: center;
