--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
  .nav-header{
     width: 100%;
     height: 80px;
-    background-color: hsl(184, 100%, 22%);
+    background-color: #0A4D68;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -22,7 +22,7 @@
 }
 
 .logo img{
-   width: 80px;
+   width: 120px;
    position: relative;
    left: 30px;
     
@@ -267,30 +267,35 @@ header .get-socials-aside{
 }
 
 .about{
-    background-color: hsl(184, 100%, 22%);
+    background-color: #0A4D68;
+    
+    
 }
 .about h1{
     margin-top: 30px;
     font-size: 30px;
     margin-bottom: 20px;
+    color:aquamarine;;
 }
 .about-me{
     padding: 20px;
     text-align: center;
-    color: white;
+   
 }
 .about p{
     line-height: 30px;
     text-align: left;
     padding: 20px;
+    color: aquamarine;;
 }
 .about-p-link{
     color: aquamarine;
 }
 .myskills{
-    padding: 20px;
+    padding: 20px; 
     
 }
+
 
 .about-skills{
     display: flex;
@@ -299,14 +304,36 @@ header .get-socials-aside{
     justify-content: center;
     padding: 10px;
     
+    
+    
+}
+.about-skills li{
+    color: aqua;
 }
 .fa-brands{
     margin: 15px;
 }
 .myskills h1{
     text-align: center;
-    color: white;
+    color:aqua;
     margin-top: 30px;
+}
+.read-more{
+    display: none;
+}
+.about-me button{
+    padding: 10px 50px;
+    border-radius: 5px;
+    border: 2px solid aqua;
+    background-color: aquamarine;
+    color: #088395;
+    font-size: 20px;
+    text-align: start;
+    cursor: pointer;
+}
+.about-me button:hover{
+    opacity: 0.6;
+    transition: 0.5s;
 }
 /* media screen for about and skills i learnt start here */
 @media only screen and (min-width:780px){
@@ -316,6 +343,7 @@ header .get-socials-aside{
         flex-direction: row;
         align-items: center;
         justify-content: center;
+        padding: 50px;
     }
     .about-me{
         width: 450px;
@@ -323,6 +351,7 @@ header .get-socials-aside{
         border: 2px solid white;
         padding: 30px;
     }
+    
     .myskills{
         width: 400px;
         margin-left: 20px;
@@ -341,13 +370,13 @@ header .get-socials-aside{
 }
 .cards img{
     width: 100%;
-    border: 2px solid white;
+    border: 2px solid #088395;
   
 }
 .visitsite{
-    background-color: hsl(184, 100%, 22%);
+    background-color: #0A4D68;
     color: white;
-    border: 1px solid white;
+    border: 1px solid #088395;
     border-radius: 5px;
     padding: 10px 30px ;
     margin: 10px 0;
@@ -393,13 +422,16 @@ header .get-socials-aside{
         margin: 20px;
     }
 }
+.get-in-touch{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #0A4D68;
+}
  .message{
-    height: 100vh;
-    background-color: hsl(184, 100%, 22%);
+    margin-bottom: 50px;
     text-align: center; 
     color: white;
-    
-    /* padding-bottom: 50px; */
     
 }
 .message input{
@@ -407,9 +439,11 @@ header .get-socials-aside{
     height: 35px;
     margin-bottom: 10px;
     border-radius: 5px;
+    background-color: #088395;
     border:2px solid hsl(184, 77%, 48%) ;
     padding: 5px;
     cursor: pointer;
+    color: white;
     
 }
 .message h3{
@@ -422,66 +456,29 @@ header .get-socials-aside{
     border:2px solid hsl(184, 77%, 48%);
     margin: 5px;
     text-align: start;
+    background-color: #088395;
 }
+::placeholder { 
+    color:white;
+    opacity: 1; 
+  }
 .message .sendmessage{
     width: 120px;
     height: 35px;
     border-radius: 5px;
-    background-color: hsl(184, 100%, 22%);
-    border:2px solid white;
+    background-color: #088395;
+    border:2px solid aquamarine;
     color: aliceblue;
     margin-top: 7px;
     
     
 }
-
-
-/* .get-in-touch{
-    height: 100vh;
-    background-color: hsl(184, 100%, 22%);
-    text-align: center; 
-    color: white;
-    /* padding-bottom: 50px; */
-    
-} */
-/* .get-message{
-    margin-bottom: 160px;
-}
-.get-message h1{
-    color: white;
-    font-size: 35px;
-    margin-bottom: 10px;
-    padding-top: 50px;
-    text-decoration: underline;
-    
+@media only screen and (min-width:780px){
+    .message{
+        width: 30%;
+    }
 
 }
-.get-message p{
-    font-size: 25px;
-    margin-bottom: 100px;
-    padding: 20px;
-    
-}
-.get-message .getin{
-    color: white;
-    margin: 100px;
-    padding: 20px;
-    
-    
-}
-.get-message .two{
-    margin-top: 30px;
-}
-.two a:hover{
-    background-color: white;
-    color: hsl(184, 100%, 22%);
-}
-.two a{
-    border: 2px solid white;
-    color: white;
-    padding: 10px;
-    border-radius: 5px;
-} */
 
 .get-socials ul{
     float: inline-end;
