--- a/style.css
+++ b/style.css
@@ -143,7 +143,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 20px 40px 0 40px ;
+    padding: 20px 40px 50px 40px ;
     border: 0;
     
     
